@@ -1,54 +1,0 @@
-/*
- * Copyright 2002-2011 the original author or authors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.springframework.context.annotation;
-
-import java.lang.annotation.Documented;
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-
-import org.springframework.stereotype.Component;
-
-/**
- * TODO SPR-7420: document
- *
- * @author Chris Beams
- * @since 3.1
- * @see Configuration
- */
-@Target(ElementType.TYPE)
-@Retention(RetentionPolicy.RUNTIME)
-@Documented
-@Component
-public @interface FeatureConfiguration {
-
-	/**
-	 * Explicitly specify the name of the Spring bean definition associated
-	 * with this FeatureConfiguration class.  If left unspecified (the common case),
-	 * a bean name will be automatically generated.
-	 *
-	 * <p>The custom name applies only if the FeatureConfiguration class is picked up via
-	 * component scanning or supplied directly to a {@link AnnotationConfigApplicationContext}.
-	 * If the FeatureConfiguration class is registered as a traditional XML bean definition,
-	 * the name/id of the bean element will take precedence.
-	 *
-	 * @return the specified bean name, if any
-	 * @see org.springframework.beans.factory.support.DefaultBeanNameGenerator
-	 */
-	String value() default "";
-}
